--- a/RetailStore/build.gradle
+++ b/RetailStore/build.gradle
@@ -27,3 +27,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
+
+
+//tasks
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.13'
+}
