--- a/RetailStore/build.gradle
+++ b/RetailStore/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+    	mavenCentral()
         jcenter()
         maven { url "http://repo.spring.io/snapshot" }
         maven { url "http://repo.spring.io/milestone" }
@@ -11,6 +12,10 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'spring-boot'
+
+springBoot {
+  mainClass = "com.akijay.retailstore.RetailStore"
+}
 
 jar {
     baseName = 'retailstore'
@@ -24,13 +29,8 @@ repositories {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile  "org.springframework.boot:spring-boot-starter-web", 
+    		 "org.neo4j:neo4j:3.0.1"
+    		
     testCompile("org.springframework.boot:spring-boot-starter-test")
-}
-
-
-//tasks
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
 }
