--- a/RetailStore/build.gradle
+++ b/RetailStore/build.gradle
@@ -1,16 +1,23 @@
 buildscript {
     repositories {
+    	mavenCentral()
         jcenter()
         maven { url "http://repo.spring.io/snapshot" }
         maven { url "http://repo.spring.io/milestone" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.0.BUILD-SNAPSHOT")
+	    classpath('io.spring.gradle:dependency-management-plugin:0.6.1.RELEASE')
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'idea'
+
+springBoot {
+  mainClass = "com.akijay.retailstore.RetailStore"
+}
 
 jar {
     baseName = 'retailstore'
@@ -18,19 +25,16 @@ jar {
 }
 
 repositories {
-    jcenter()
+    maven { url "https://repo.spring.io/libs-snapshot" }
     maven { url "http://repo.spring.io/snapshot" }
     maven { url "http://repo.spring.io/milestone" }
+    jcenter()
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-}
-
-
-//tasks
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
+    compile  "org.springframework.boot:spring-boot-starter-web", 
+    		 "org.neo4j:neo4j:3.0.1",
+             "org.springframework.boot:spring-boot-starter-data-mongodb"
+    		
+    testCompile("org.springframework.boot:spring-boot-starter-test:2.0.0.BUILD-SNAPSHOT")
 }
