--- a/RetailStore/build.gradle
+++ b/RetailStore/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
 
 springBoot {
-  mainClass = "com.akijay.retailstore.RetailStore"
+  mainClass = "com.akijay.retailstore.RetailStoreApplication"
 }
 
 jar {
@@ -32,8 +32,11 @@ repositories {
 }
 
 dependencies {
-    compile  "org.springframework.boot:spring-boot-starter-web", 
-    		 "org.neo4j:neo4j:3.0.1",
+    compile  "org.springframework.boot:spring-boot-starter-web",
+             "org.springframework.boot:spring-boot-starter-data-jpa",
+             "com.fasterxml.jackson.datatype:jackson-datatype-jdk8",
+             "org.neo4j:neo4j:3.0.1",
+             "org.mongodb:mongo-java-driver:3.3.0",
              "org.springframework.boot:spring-boot-starter-data-mongodb"
     		
     testCompile("org.springframework.boot:spring-boot-starter-test:2.0.0.BUILD-SNAPSHOT")
